# contextCLI

./: .env.example  .gitignore  README.md  pyproject.toml  skill.md
.github/workflows/: ci.yml
contextCLI/: assembler.py  cli.py  config.py  core.py  doctor.py  hooks.py  metrics.py  storage.py  summarizer.py  utils.py
examples/: skill_document.md
hooks/: claude-end-of-turn.sh  post-commit
