[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextCLI"
version = "0.1.0"
description = "A CLI that maintains distilled working context in a .contextCLI directory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "contextCLI contributors" }]
keywords = ["cli", "agents", "llm", "memory", "persistence"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
]

[project.scripts]
contextCLI = "contextCLI.cli:main"

[project.urls]
Homepage = "https://github.com/concensure/contextCLI"
Issues = "https://github.com/concensure/contextCLI/issues"

[tool.setuptools]
packages = ["contextCLI"]
